# SPSS-MCP

./: .gitignore  CONFIGURATION.md  CONNECTION_DIAGRAM.md  EXPANSION_PLAN.md  LICENSE  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  SETUP_GUIDE.md  TOOLS_REFERENCE.md  install.bat  install.ps1  pyproject.toml  spss-analyst.skill
src/spss_mcp/: __init__.py  claude_config.py  cli.py  config.py  method_registry.py  method_templates.py  sav_reader.py  server.py  spss_engine.py  spss_runner.py
tests/: test_case_selection_context.py  test_claude_config.py  test_method_registry.py  test_method_templates.py  test_method_validation.py  test_reproduction_manifest.py  test_runner_result_classification.py  test_runtime_config.py  test_server_cold_methods.py
