[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spss-mcp"
dynamic = ["version"]
description = "A Model Context Protocol server for IBM SPSS Statistics"
readme = "README.md"
authors = [
    { name = "SPSS MCP Contributors" }
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp>=1.2.0",
    "fastmcp>=2.14.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pyreadstat>=1.2.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/spss-mcp"
Repository = "https://github.com/yourusername/spss-mcp"
Issues = "https://github.com/yourusername/spss-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
spss-mcp = "spss_mcp.cli:main"

[tool.hatch.version]
path = "src/spss_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/spss_mcp"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
